--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   devskill-ui:
@@ -8,7 +7,7 @@ services:
     ports:
       - "8081:8081"
     depends_on:
-      - devskill
+      - devskill-apic
       - postgres
 
   devskill-api:
